--- a/PROJETO OBJETIVO/assets/css/style.css
+++ b/PROJETO OBJETIVO/assets/css/style.css
@@ -197,6 +197,29 @@ header .social-medias p {
      margin-top: 20px;
 }
 
+.download {
+    display: block;
+    margin-bottom: 30px;
+    margin-top: -20px;
+}
+.download a {
+    font-family: 'Signika', sans-serif;
+    text-rendering: geometricPrecision;
+    font-size: 24px;
+    background-color: #fbc443;
+    color: #2c3344;
+    padding: 10px 10px;
+    border-radius: 5px;
+    border-left: 10px solid;
+    transition: all 0.25s ease-in-out;
+    text-decoration: none;
+}
+
+.download a:hover {
+    color: #fbc443;
+    background-color: #2c3344;
+}
+
 article img {
     margin-left: 15px;
     width: auto;    
